@@ -101,7 +101,7 @@ GetFont(
 	    ftFont = XftFontOpen(fontPtr->display, fontPtr->screen,
 			FC_FAMILY, FcTypeString, "sans",
 			FC_SIZE, FcTypeDouble, 12.0,
-			(void *) NULL);
+			NULL);
 	}
 	if (!ftFont) {
 	    /*
